--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         </div>
       </div>
       <div class="socials">
-        <h3 class="title">Socials</h3>
+        <h3 class="title">Socials Links</h3>
         <div class="social_item">
           <p class="exp"><a href="https://github.com/Piyushjha69">Github</a>
           </p>
